--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--[if lt IE 9]> 
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> 
+    <![endif]--> 
     <link rel="stylesheet" type="text/css" href="main.css">
     <title>The Most Delicious Ipsum</title>
 </head>
