Changed my mind on something and forgot to edit it back out.

--- a/fancy.html
+++ b/fancy.html
@@ -24,7 +24,7 @@
             <input type="radio" name="nothappening" id="option-1">
             <label for="option-1"><span class="form--radio" role="radiogroup">No</span></label>
         </div>
-        <div class="form--radioContainer" role="radiogroup">
+        <div class="form--radioContainer">
             <input type="radio" name="nothappening" id="option-2">        
             <label for="option-2"><span class="form--radio" role="radiogroup">Go Away</span></label>
         </div>
