--- a/index.html
+++ b/index.html
@@ -7,21 +7,38 @@
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> 
     <![endif]--> 
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
     <title>The Most Delicious Ipsum</title>
 </head>
 <body>
-    <div class="main">
-        <h1 class="main--heading">Pie gingerbread lollipop chocolate gingerbread.</h1>
-        <p>I love icing jelly candy canes I love cotton candy. Marshmallow halvah jelly-o croissant icing jelly-o. Muffin candy marzipan lemon drops I love. Donut danish cake cheesecake cheesecake sweet roll fruitcake toffee. Candy canes I love icing cake chocolate bar I love danish powder. Donut bear claw cake cheesecake bear claw. Candy canes pie brownie ice cream. Sweet cookie sugar plum fruitcake croissant I love I love jelly beans cake. I love cheesecake bear claw. Chocolate bar tart ice cream liquorice croissant. Chupa chups gummi bears biscuit. Cookie cookie candy.</p>
-        <ul class="main--uList">
-            <li>Chocolate carrot cake</li>
-            <li>Cookie sesame snaps</li>
-            <li>Sweet jelly rolls</li>
-            <li>Liquorice cheesecake</li>
-        </ul>
-        <div class="main--uList-background">
-            <img src="https://www.pinclipart.com/picdir/big/52-520158_small-cupcake-clipart-cupcake-clipart-transparent-background-png.png" alt="A tasty cupcake.">
+    <div class="container container--big">
+        <header class="container__header">
+            <h1 class="container__header--title">Pie gingerbread lollipop chocolate gingerbread.</h1>
+        </header>
+        <div class="container__column container__column--left">
+            <p>I love icing jelly candy canes I love cotton candy. Marshmallow halvah jelly-o croissant icing jelly-o. Muffin candy marzipan lemon drops I love. Donut danish cake cheesecake cheesecake sweet roll fruitcake toffee. Candy canes I love icing cake chocolate bar I love danish powder. Donut bear claw cake cheesecake bear claw. Candy canes pie brownie ice cream. Sweet cookie sugar plum fruitcake croissant I love I love jelly beans cake. I love cheesecake bear claw. Chocolate bar tart ice cream liquorice croissant. Chupa chups gummi bears biscuit. Cookie cookie candy.</p>
+            <ul>
+                <li>Chocolate carrot cake</li>
+                <li>Cookie sesame snaps</li>
+                <li>Sweet jelly rolls</li>
+                <li>Liquorice cheesecake</li>
+            </ul>
+            <p>Tart biscuit carrot cake I love dessert tart lollipop. Fruitcake dragée I love. Biscuit I love marzipan pie lemon drops sweet roll chocolate bar sweet roll I love. Cheesecake candy canes wafer apple pie gummies halvah I love chocolate bar tiramisu. Jelly bonbon carrot cake dragée cotton candy. Pastry bonbon caramels brownie fruitcake. Carrot cake oat cake pie lollipop. Gummies pie gingerbread sweet roll. Soufflé apple pie wafer tiramisu tiramisu macaroon. Pudding jujubes chocolate bar jelly wafer icing tootsie roll candy canes candy canes. Oat cake candy canes I love ice cream I love I love sweet.</p>
         </div>
+        <div class="container__column container__column--right">
+            <p>Tart biscuit carrot cake I love dessert tart lollipop. Fruitcake dragée I love. Biscuit I love marzipan pie lemon drops sweet roll chocolate bar sweet roll I love. Cheesecake candy canes wafer apple pie gummies halvah I love chocolate bar tiramisu. Jelly bonbon carrot cake dragée cotton candy. Pastry bonbon caramels brownie fruitcake. Carrot cake oat cake pie lollipop. Gummies pie gingerbread sweet roll. Soufflé apple pie wafer tiramisu tiramisu macaroon. Pudding jujubes chocolate bar jelly wafer icing tootsie roll candy canes candy canes. Oat cake candy canes I love ice cream I love I love sweet.</p>
+            <ul>
+                <li>Ice cream macaroon</li>
+                <li>Cheesecake candy canes</li>
+                <li>gingerbread sweet roll</li>
+                <li>Chocolate bar tiramisu</li>
+            </ul>
+            <p>I love icing jelly candy canes I love cotton candy. Marshmallow halvah jelly-o croissant icing jelly-o. Muffin candy marzipan lemon drops I love. Donut danish cake cheesecake cheesecake sweet roll fruitcake toffee. Candy canes I love icing cake chocolate bar I love danish powder. Donut bear claw cake cheesecake bear claw. Candy canes pie brownie ice cream. Sweet cookie sugar plum fruitcake croissant I love I love jelly beans cake. I love cheesecake bear claw. Chocolate bar tart ice cream liquorice croissant. Chupa chups gummi bears biscuit. Cookie cookie candy.</p>
+        </div>
+        <footer class="container__footer">
+            <p>Text from <a href="http://www.cupcakeipsum.com">Cupcake Ipsum</a>.</p>
+        </footer>
     </div>
 </body>
 </html>
