Actually followed the instructions.  I'm really bad about that.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container container--big">
         <header class="container__header">
             <h1 class="container__header--title">Pie gingerbread lollipop chocolate gingerbread.</h1>
+            <img class="container__header--excited" src="https://www.pinclipart.com/picdir/big/52-520158_small-cupcake-clipart-cupcake-clipart-transparent-background-png.png" alt="Cupcake!">
         </header>
         <div class="container__column container__column--left">
             <p>I love icing jelly candy canes I love cotton candy. Marshmallow halvah jelly-o croissant icing jelly-o. Muffin candy marzipan lemon drops I love. Donut danish cake cheesecake cheesecake sweet roll fruitcake toffee. Candy canes I love icing cake chocolate bar I love danish powder. Donut bear claw cake cheesecake bear claw. Candy canes pie brownie ice cream. Sweet cookie sugar plum fruitcake croissant I love I love jelly beans cake. I love cheesecake bear claw. Chocolate bar tart ice cream liquorice croissant. Chupa chups gummi bears biscuit. Cookie cookie candy.</p>
@@ -37,7 +38,7 @@
             <p>I love icing jelly candy canes I love cotton candy. Marshmallow halvah jelly-o croissant icing jelly-o. Muffin candy marzipan lemon drops I love. Donut danish cake cheesecake cheesecake sweet roll fruitcake toffee. Candy canes I love icing cake chocolate bar I love danish powder. Donut bear claw cake cheesecake bear claw. Candy canes pie brownie ice cream. Sweet cookie sugar plum fruitcake croissant I love I love jelly beans cake. I love cheesecake bear claw. Chocolate bar tart ice cream liquorice croissant. Chupa chups gummi bears biscuit. Cookie cookie candy.</p>
         </div>
         <footer class="container__footer">
-            <p>Text from <a href="http://www.cupcakeipsum.com">Cupcake Ipsum</a>.</p>
+            <p>Text from <a href="http://www.cupcakeipsum.com">Cupcake Ipsum</a>.  Cupcake from <a href="https://pinclipart.com">Pinclipart</a>.</p>
         </footer>
     </div>
 </body>
